codes slightly modified, minimum product fixed

--- a/Bootcamp_pre-assessment.ipynb
+++ b/Bootcamp_pre-assessment.ipynb
@@ -108,16 +108,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def product_of_smallers(a,b,c):\n",
     "    arr = list([a,b,c])\n",
-    "    minimum=min(arr)\n",
-    "    arr.remove(minimum)\n",
-    "    maximum = max(arr)\n",
-    "    return minimum*maximum"
+    "    minimum1=min(arr)\n",
+    "    arr.remove(minimum1)\n",
+    "    minimum2 = min(arr)\n",
+    "    return minimum1*minimum2\n",
+    "product_of_smallers(3,5,7)"
    ]
   },
   {
@@ -177,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +238,7 @@
        "STREET                262757   78.549819"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -278,8 +290,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Location Description</th>\n",
-       "      <th>Year</th>\n",
        "      <th>Date</th>\n",
        "      <th>Block</th>\n",
        "      <th>Primary Type</th>\n",
@@ -288,12 +298,20 @@
        "      <th>Community Area</th>\n",
        "      <th>Location</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>GAS STATION</td>\n",
-       "      <td>2017.0</td>\n",
+       "      <th>2017</th>\n",
        "      <td>382.0</td>\n",
        "      <td>382.0</td>\n",
        "      <td>382.0</td>\n",
@@ -303,9 +321,7 @@
        "      <td>382.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>GAS STATION</td>\n",
-       "      <td>2020.0</td>\n",
+       "      <th>2020</th>\n",
        "      <td>431.0</td>\n",
        "      <td>431.0</td>\n",
        "      <td>431.0</td>\n",
@@ -319,16 +335,13 @@
        "</div>"
       ],
       "text/plain": [
-       "  Location Description    Year   Date  Block  Primary Type  Description  \\\n",
-       "6          GAS STATION  2017.0  382.0  382.0         382.0        382.0   \n",
-       "7          GAS STATION  2020.0  431.0  431.0         431.0        431.0   \n",
-       "\n",
-       "    Ward  Community Area  Location  \n",
-       "6  382.0           382.0     382.0  \n",
-       "7  431.0           431.0     431.0  "
+       "       Date  Block  Primary Type  Description   Ward  Community Area  Location\n",
+       "Year                                                                          \n",
+       "2017  382.0  382.0         382.0        382.0  382.0           382.0     382.0\n",
+       "2020  431.0  431.0         431.0        431.0  431.0           431.0     431.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,10 +349,8 @@
    "source": [
     "result =pd.DataFrame(df.groupby(['Location Description','Year']).agg('count'))\n",
     "result = result.where(result['Date']>350).dropna()\n",
-    "result\n",
-    "result.reset_index(inplace=True)\n",
-    "result\n",
-    "result.where(result['Location Description']=='GAS STATION').dropna()"
+    "result.loc['GAS STATION']\n",
+    "#result"
    ]
   },
   {
@@ -958,7 +969,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
